[package]
name = "ldk-node-cashu-mint"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-node = { git = "https://github.com/tnull/ldk-node", branch = "2024-01-0.3-pre-alpha" }
bitcoin = "0.30.2"
moksha-core = { git = "https://github.com/ngutech21/moksha", rev = "18d99977965662d46ccec29fecdb0ce493745917" }
tokio = "1.36.0"
axum = "0.6.20"
anyhow = "1.0.42"
serde = "1.0.130"
serde_json= "1.0"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
nostr = "0.28.1"
nostr-sdk = "0.28.0"
