[package]
name = "ldk-node-cashu-mint"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-node = { git = "https://github.com/benthecarman/ldk-node", branch = "2024-01-0.3-pre-alpha" }
bitcoin = "0.30.2"
#moksha-core = { git = "https://github.com/benthecarman/moksha", branch = "hackathon" }
moksha-core = { git = "https://github.com/elnosh/moksha", branch = "master" }
#moksha-mint = { git = "https://github.com/benthecarman/moksha", branch = "hackathon" }
moksha-mint = { git = "https://github.com/elnosh/moksha", branch = "master" }
tokio = "1.36.0"
axum = "0.6.20"
anyhow = "1.0.42"
serde = "1.0.130"
serde_json = "1.0"
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"
nostr = "0.28.1"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "be7841dbaed41675b0bb024c41fca1e2c6f82ccf" }
clap = { version = "4.5.2", features = ["derive"] }
log = "0.4.21"
async-trait = "0.1.74"

lightning-invoice_26 = { package = "lightning-invoice", version = "0.26.0" }
